# alloy-mcp

./: Cargo.toml  README.md
.github/workflows/: ci.yml
resources/consensus/: events.md  recovered.md  transactions.md
resources/eips/: block-identifiers.md
resources/encoding/: blobs.md  rlp-eip2718.md
resources/primitives/: core-types.md
resources/provider/: fillers.md  setup.md
resources/rpc/: transaction-request.md
resources/signers/: signing-guide.md
resources/sol-macro/: contract-bindings.md  sol-types.md
src/: main.rs  prompts.rs  resources.rs  server.rs  tools.rs
