[package]
name = "alloy-mcp"
version = "0.1.0"
edition = "2024"
description = "MCP server providing type context for alloy.rs"

[dependencies]
rmcp = { version = "0.14", features = ["server"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "alloy-mcp"
path = "src/main.rs"
